# transport-notify

./: .gitignore  README.md  build.ps1  config.toml  main.py  pyproject.toml
.github/workflows/: release.yml
scripts/: build.py
src/transport_overlay/: __init__.py  config.py  formatting.py  models.py  poller.py  schedule.py  yandex_live.py  yandex_source.py
src/transport_overlay/ui/: __init__.py  overlay.py  tray.py
