[project]
name = "transportation-overlay"
version = "0.1.0"
description = "Compact always-on-top transport arrival overlay for Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "aiohttp>=3.9",
    "curl-cffi>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transport_overlay"]
